tests/NormalTests/paczka1/fuzzy1/62758742.err
Error in line 4: bNW S654 22,2
Error in line 10: YlwqCbg9oD S669 9,4
Error in line 25: A424 A424 74,1
Error in line 19: wg5KHI83 S654 79,9
